# revisiting-bad-snakes

./: .gitignore  README.md  analysis-presentation.ipynb  analysis-report.ipynb  execute-bench.sh  parse-results.sh  schema.sql
bench/: backstabbers.sh  datadog.batch  datadog.sh  dependents.batch  dependents.sh  downloaded.batch  downloaded.sh  maloss.batch  maloss.sh  malregistry.sh  random.batch  random.sh
oci/: build.sh
oci/bandit4mal/: Dockerfile  bandit4mal.sh
oci/bandit4mal/bandit4mal/: Pipfile  README.rst  setup.cfg
oci/bandit4mal/bandit4mal/bandit/blacklists/: calls.py  imports.py
oci/bandit4mal/bandit4mal/bandit/plugins/: base64.py  code.py  compileall.py  concurrent.py  ctypes.py  eval.py  exec.py  fileinput.py  getpass.py  http.py  ip_found.py  multiprocessing.py  os.py  pathlib.py  platform.py  requests.py  shutil.py  signal.py  socket.py  ssl.py  tarfile.py  tempfile.py  url_found.py  urllib.py  zlib.py
oci/bandit4mal/bandit4mal/examples/: base64-b64decode-alias.py  base64-b64encode-standalone.py  base64-b64encode.py  base64_b64decode.py  base64_b64encode.py  code_InteractiveInterpreter_runsource.py  compileall_compile_file.py  concurrent_futures_Executor.py  ctypes_CDLL.py  eval.py  fileinput_input.py  getpass_getuser.py  http_client.py  http_client_HTTPConnection.py  http_client_HTTPConnection_getresponse.py  http_client_HTTPConnection_request.py  http_client_HTTPSConnection_request.py  http_cookiejar_FileCookieJar_load.py  http_server_HTTPServer.py  import_socketserver.py  import_urlparse.py  imports.py  ip_found.py  multiprocessing_Process.py  multiprocessing_pool.py  new_import.py  open_file_used.py  os_chmod.py  os_environ.py  os_getuid.py  os_popen.py  os_read.py  os_system.py  os_write.py  pathlib_Path_rmdir.py  platform_system.py  pwd_getpwuid.py  shutil_rmtree.py  signal_signal.py  smtplib_SMTP_SSL_sendmail.py  (+20 more)
oci/guarddog/: Dockerfile  entrypoint.sh
oci/ossgadget/: Dockerfile
oci/ossgadget/ossgadget/: OSSGadget.Shared.Cli.deps.json  OSSGadget.Shared.Lib.deps.json  oss-characteristic  oss-characteristic.deps.json  oss-defog  oss-defog.deps.json  oss-detect-backdoor  oss-detect-backdoor.deps.json  oss-detect-cryptography  oss-detect-cryptography.deps.json  oss-diff  oss-diff.deps.json  oss-download  oss-download.deps.json  oss-find-domain-squats  oss-find-domain-squats.deps.json  oss-find-source  oss-find-source.deps.json  oss-find-squats  oss-find-squats-lib.deps.json  oss-find-squats.deps.json  oss-fresh  oss-fresh.deps.json  oss-health  oss-health.deps.json  oss-metadata  oss-metadata.deps.json  oss-reproducible  oss-reproducible.deps.json  oss-risk-calculator  oss-risk-calculator.deps.json
oci/pypi/: Dockerfile  pypi.py
parse/: bandit4mal.sh  guarddog.sh  ossgadget.sh  pypi.sh
test/: test.sh
test/output/: benign-b4m  benign-gd  benign-ossg  benign-pypi  malicious-b4m  malicious-gd  malicious-ossg  malicious-pypi
